--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/router": "^15.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "dayjs": "^1.11.8",
     "jwt-decode": "^3.1.2",
+    "ng-hcaptcha": "^2.1.0",
+    "ngx-spinner": "^15.0.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
