--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "angularx-qrcode": "^15.0.1",
     "dayjs": "^1.11.8",
     "jwt-decode": "^3.1.2",
     "ng-hcaptcha": "^2.1.0",
