feat: se ruta para permitir ingreso

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "dayjs/plugin/localizedFormat",
               "dayjs/plugin/isSameOrAfter",
               "dayjs/plugin/isSameOrBefore",
-              "sweetalert2"
+              "sweetalert2",
+              "qrcode"
             ],
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
