--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "angularx-qrcode": "^15.0.1",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.8",
     "jwt-decode": "^3.1.2",
     "ng-hcaptcha": "^2.1.0",
@@ -36,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.2.8",
     "@angular/cli": "~15.2.8",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
