feat: se integra la descarga del QR en formato pdf

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "dayjs/plugin/isSameOrBefore",
               "sweetalert2",
               "qrcode",
-              "crypto-js"
+              "crypto-js",
+              "file-saver"
             ],
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
