--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "angularx-qrcode": "^15.0.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.8",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "ng-hcaptcha": "^2.1.0",
     "ngx-spinner": "^15.0.1",
+    "pdfmake-wrapper": "^2.1.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
@@ -38,7 +40,9 @@
     "@angular/cli": "~15.2.8",
     "@angular/compiler-cli": "^15.2.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.2",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
