feat: se quitan logs en pro y se agregan libs a angular.json

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "sweetalert2",
               "qrcode",
               "crypto-js",
-              "file-saver"
+              "file-saver",
+              "pdfmake/build/pdfmake",
+              "pdfmake/build/vfs_fonts"
             ],
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
